@@ -8,6 +8,7 @@
     there to allow acting upon them.
     * Enforced the use of the "deluge.plugins" namespace to reduce package
     names clashing beetween regular packages and deluge plugins.
+    * Fix potential for host_id collision when creating hostlist entries.
 
 ==== Core ====
     * Make the distinction between adding to the session new unmanaged torrents
